# easy-shader-runner

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
easy-shader-runner/: Cargo.toml  build.rs
easy-shader-runner/src/: app.rs  bind_group_buffer.rs  context.rs  controller.rs  fps_counter.rs  lib.rs  render_pass.rs  shader.rs  ui.rs  user_event.rs
example/: Cargo.toml  build.rs
example/.cargo/: config.toml
example/builder/: Cargo.toml
example/builder/src/: main.rs
example/shader/shader/src/: lib.rs
example/shader/shared/: Cargo.toml
example/shader/shared/src/: grid.rs  lib.rs
example/shader/shared/src/push_constants/: mod.rs  shader.rs
example/src/: lib.rs
example/src/controller/: mod.rs
examples/cellular_automata/: Cargo.toml
examples/cellular_automata/shader/shared/src/: grid.rs  lib.rs
examples/cellular_automata/shader/shared/src/noise/: LICENSE  mod.rs
examples/cellular_automata/shader/shared/src/push_constants/: mod.rs  shader.rs
examples/cellular_automata/src/: lib.rs
examples/cellular_automata/src/controller/: mod.rs  simulation_runner.rs
runner/: Cargo.toml  build.rs
runner/builder/: Cargo.toml
runner/builder/src/: main.rs
runner/builder_launcher/: Cargo.toml
runner/builder_launcher/src/: lib.rs
runner/src/: app.rs  bind_group_buffer.rs  context.rs  controller.rs  fps_counter.rs  lib.rs  render_pass.rs  shader.rs  ui.rs  user_event.rs
runner/src/controller/: mod.rs  ui.rs
shader/shader/: Cargo.toml
shader/shader/src/: lib.rs
shader/shared/: Cargo.toml
shader/shared/src/: lib.rs
shader/shared/src/noise/: simplex.rs
shader/shared/src/push_constants/: mod.rs  shader.rs
shaders/main/: Cargo.toml
shaders/main/src/: lib.rs
shaders/shared/: Cargo.toml
shaders/shared/src/push_constants/: mod.rs  shader.rs
wasm-app/: index.html  index.js  package-lock.json  package.json  vite.config.js
