[workspace]
resolver = "2"
members = [
  "easy-shader-runner",
  "example",
  "example/builder",
  "example/shader/shader",
]

[workspace.package]
version = "0.1.0"
authors = ["Abel <abel465@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/abel465/easy-shader-runner"

[workspace.dependencies]
bytemuck = { version = "1.22.0", default-features = false }
glam = { version = "0.29.3", default-features = false }

[workspace.dependencies.spirv-std]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "87ea628070561f576aeef84c92a0e3e3c25d63ff"

[workspace.dependencies.spirv-builder]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "87ea628070561f576aeef84c92a0e3e3c25d63ff"

[profile.dev]
package.spirv-tools-sys.opt-level = 1
