[package]
name = "easy-shader-runner"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Use rust shaders and egui on the web and native"
keywords = ["shaders", "rust-gpu", "egui"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["hot-reload-shader"]
runtime-compilation = ["dep:spirv-builder"]
hot-reload-shader = ["spirv-builder/watch"]
emulate_constants = []
compute = []

[dependencies]
cfg-if = "1.0.0"
bytemuck = { workspace = true }
glam = { workspace = true }
log = "0.4.26"
web-time = "1.1.0"
egui = "0.30.0"
egui-wgpu = "0.30.0"
egui-winit = { version = "0.30.0", default-features = false }
wgpu = { version = "23.0.1", default-features = false, features = ["spirv"] }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
futures = { version = "0.3", default-features = false, features = ["executor"] }
egui-winit = { version = "*" }
env_logger = "0.10.0"
spirv-builder = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "*", default-features = false, features = ["webgpu"] }
winit = "0.30.0"
web-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
