[package]
name = "runner"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
default = ["use-compiled-tools", "watch"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]
watch = ["spirv-builder/watch"]
emulate_constants = []

[dependencies]
cfg-if = "1.0.0"
shared = { path = "../shader/shared" }
futures = { version = "0.3", default-features = false, features = ["executor"] }
structopt = { version = "0.3.26", default-features = false }
bytemuck = { workspace = true }
egui = "0.31.1"
egui-wgpu = "0.31.1"
glam = { workspace = true }
log = "0.4.26"
web-time = "1.1.0"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
wgpu = { version = "24.0.1", default-features = false, features = [
  "spirv",
] }
egui-winit = "0.31.1"
env_logger = "0.10.0"
spirv-builder = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "24.0.1", default-features = false, features = [
  "spirv",
  "webgpu",
] }
egui-winit = { version = "0.31.0", default-features = false }
winit = "0.30.0"
web-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
