[package]
name = "runner"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
default = ["use-compiled-tools", "watch"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]
watch = ["spirv-builder/watch"]
emulate_constants = []

[dependencies]
cfg-if = "1.0.0"
futures = { version = "0.3", default-features = false, features = ["executor"] }
bytemuck = { workspace = true }
glam = { workspace = true }
log = "0.4.26"
web-time = "1.1.0"
egui = "0.30.0"
egui-wgpu = "0.30.0"
egui-winit = { version = "0.30.0", default-features = false }
wgpu = { version = "23.0.1", default-features = false, features = ["spirv"] }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
egui-winit = { version = "*" }
env_logger = "0.10.0"
spirv-builder = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "*", default-features = false, features = ["webgpu"] }
winit = "0.30.0"
web-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
