[package]
name = "cellular_automata"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# See rustc_codegen_spirv/Cargo.toml for details on these features
# [features]
# default = ["use-compiled-tools", "watch"]
# use-installed-tools = ["spirv-builder/use-installed-tools"]
# use-compiled-tools = ["spirv-builder/use-compiled-tools"]
# watch = ["spirv-builder/watch"]
# emulate_constants = []

[dependencies]
cfg-if = "1.0.0"
shared = { path = "shader/shared" }
structopt = { version = "0.3.26", default-features = false }
bytemuck = { workspace = true }
glam = { workspace = true }
web-time = "1.1.0"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
runner = { path = "../../runner" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
runner = { path = "../../runner", default-features = false, features = [
  "emulate_constants",
] }
