[package]
name = "cellular_automata"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
shared = { path = "shader/shared" }
structopt = { version = "0.3.26", default-features = false }
bytemuck = { workspace = true }
glam = { workspace = true }
web-time = "1.1.0"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
runner = { path = "../../runner" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
runner = { path = "../../runner", features = ["emulate_constants"] }
