[package]
name = "shared"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spirv-std = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }

[target.'cfg(not(any(target_arch = "spirv")))'.dependencies]
winit = { version = "0.30.5", default-features = false }
rayon = "1.10.0"
rand = "0.8.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_arch, values("spirv"))'] }
