[package]
name = "shared"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spirv-std = { workspace = true }

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { workspace = true }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true, features = ["bytemuck"] }
bytemuck = { workspace = true, features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_arch, values("spirv"))',
] }
